# gb_emu_c

./: CMakeLists.txt
include/: cartridge.h  cpu.h  debugger.h  file_utils.h  instruction.h  instruction_functions.h  instructions_debugger.h  interrupt.h  mmu.h  stack_operations.h
src/: cartridge.c  cpu.c  debugger.c  file_utils.c  gui.c  instruction_functions.c  instruction_mapper.c  interrupt.c  main.c  mmu.c  stack_operations.c
tests/: call_ret_ect_instructions.c  inc_dec_instructions.c  jump_instructions.c  ld_16_green_instructions.c  ld_blue_instructions.c  ld_instructions.c  push_pop_instructions.c  serial_io.c  test.c
